--- a/css/styles.css
+++ b/css/styles.css
@@ -324,6 +324,7 @@ input[type=number]::-webkit-outer-spin-button {
   top: 15%; /* position the text 15% away from the top */
   left: 18%;
   color: #fff;
+  background-color: rgba(102, 102, 102, 0.5);
   /*font-family: Futura;*/
   text-transform: uppercase;
   font-weight: 700;
