--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,10 @@ h2, h3, p, li, a {
 	font-family: 'Alegreya', serif;
 }
 
+.glyphicon.glyphicon-chevron-down {
+	font-size: 2em;
+}
+
 
 /*h1, h2, h3, a {
 	font-family: PT Sans, Futura, Helvetica, Arial, sans-serif;
@@ -178,6 +182,11 @@ p, li, .nav [href] {
 
 /* ABOUT PAGE */
 
+#introblock {
+	background-color: #ccffcc;
+}
+
+
 .btn-default {
 	background-color: rgba(190, 191, 193, 0.7);
 }
@@ -311,6 +320,10 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 /* WORK */
+
+#mywork {
+	background-color: #ccffcc;
+}
 
 .project-images {
 	height: 150px;
