--- a/css/styles.css
+++ b/css/styles.css
@@ -183,7 +183,7 @@ p, li, .nav [href] {
 /* ABOUT PAGE */
 
 #introblock {
-	background-color: #ccffcc;
+	background-color: #d9d9d9;
 }
 
 
@@ -322,7 +322,7 @@ input[type=number]::-webkit-outer-spin-button {
 /* WORK */
 
 #mywork {
-	background-color: #ccffcc;
+	background-color: #d9d9d9;
 }
 
 .project-images {
