--- a/css/styles.css
+++ b/css/styles.css
@@ -321,8 +321,18 @@ input[type=number]::-webkit-outer-spin-button {
 
 /* WORK */
 
+
+.example-button {
+	width: 30%;
+	margin: auto;
+}
+
 #mywork {
 	background-color: #d9d9d9;
+}
+
+#currentProject {
+	background-color: #ffcccc;
 }
 
 .project-images {
