--- a/css/styles.css
+++ b/css/styles.css
@@ -433,6 +433,10 @@ input[type=number]::-webkit-outer-spin-button {
 	text-align: justify;
 }
 
+.panel-body h3 a {
+	text-decoration: none;
+}
+
 .glyphicon-plus-sign {
 	color: #f2f2f2;
 }
