--- a/css/styles.css
+++ b/css/styles.css
@@ -331,6 +331,10 @@ input[type=number]::-webkit-outer-spin-button {
 	background-color: #d9d9d9;
 }
 
+#currents {
+	margin-bottom: 50px;
+}
+
 #currentProject {
 	background-color: #ffcccc;
 }
